syntax = "proto3";

option go_package = "github.com/damirbeybitov/todo_project/proto/task";

// Сообщение для представления задачи
message Task {
  int64 id = 1;
  string title = 2;
  string description = 3;
  bool status = 4;
  int64 user_id = 5;
}

// Сообщение для запроса создания задачи
message CreateTaskRequest {
  Task task = 1;
}

// Ответ на запрос создания задачи
message CreateTaskResponse {
  int64 id = 1;
}

// Сообщение для запроса получения задачи
message GetTaskRequest {
  int64 id = 1;
}

// Ответ на запрос получения задачи
message GetTaskResponse {
  Task task = 1;
}

// Сообщение для запроса обновления задачи
message UpdateTaskRequest {
  Task task = 1;
}

// Ответ на запрос обновления задачи
message UpdateTaskResponse {
  Task task = 1;
}

// Сообщение для запроса удаления задачи
message DeleteTaskRequest {
  int64 id = 1;
}

// Ответ на запрос удаления задачи
message DeleteTaskResponse {
  int64 id = 1;
}

// Сервис для управления задачами
service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse);
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
}
